--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -10,7 +10,7 @@
 }
 
 .heading {
-  font-size: 1.3em;
+  font-size: 1.5em;
   position: absolute;
   font-family: "Noto Serif Display", serif;
   font-weight: 300;
@@ -158,5 +158,12 @@
 @media (min-width: 1180px) and (min-height: 730px) {
   .formContainer {
     width: 10%;
+  }
+}
+
+@media (max-height: 385px) {
+  .container {
+    flex-direction: row-reverse;
+    justify-content: center;
   }
 }
