--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -532,7 +532,7 @@ html {
     width: 60vw;
     margin: 0 auto;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     padding-top: 20vh;
   }
   .name {
@@ -540,9 +540,9 @@ html {
   }
   .buttons {
     position: relative;
-    margin-top: 8vh;
-    margin-left: 0;
+    margin: 0 auto;
     padding-top: 5vh;
+    text-align: center;
   }
 
   .socialIcons {
@@ -581,8 +581,6 @@ html {
 }
 
 @media (max-height: 570px) and (max-width: 800px) {
-  .homeContainer {
-  }
   .img {
     /* top: 15vh;
     height: 20%; */
