--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -2,13 +2,14 @@
 
 .navbarContainer {
   background-color: white;
-  display: inline-flex;
+  /* display: inline-flex; */
   justify-content: center;
+  text-align: center;
   align-items: center;
   /* top: 1vh; */
-  width: 100%;
-  height: 15vh;
-  padding: 2vh;
+  width: 100vw;
+  height: 12vh;
+  /* padding: 2vh; */
   margin: 0;
   position: fixed;
   z-index: 3;
@@ -21,6 +22,7 @@
   font-family: "Red Hat Display", sans-serif;
   font-weight: 100;
   padding: 5vh;
+
   border-bottom: 1px solid rgba(0, 0, 0, 0);
 
   transition: border-bottom 300ms;
@@ -34,6 +36,7 @@
 
 .navbarLinks {
   padding: 15vh;
+
   position: relative;
   top: -10px;
 }
