--- a/src/components/AboutMe/aboutme.module.css
+++ b/src/components/AboutMe/aboutme.module.css
@@ -100,7 +100,7 @@
 
 @media (max-width: 480px) {
   .container {
-    height: 110vh;
+    height: 100vh;
   }
   .aboutMe {
     width: 70%;
@@ -109,14 +109,14 @@
     margin-right: 10vh;
     margin-left: 10vh;
     position: relative;
-    top: -5vh;
+    top: -9vh;
   }
 
   .image {
     align-self: center;
     height: 20vh;
     position: relative;
-    top: 15vh;
+    top: 10vh;
   }
 }
 
@@ -132,7 +132,7 @@
 
   .image {
     align-self: center;
-    height: 50vh;
+    height: 35vw;
     position: relative;
   }
 }
@@ -161,5 +161,14 @@
 @media (max-height: 264px) {
   .container {
     height: 200vh;
+  }
+}
+
+@media (max-width: 350px) {
+  .image {
+    display: none;
+  }
+  .aboutMe {
+    padding-top: 10vh;
   }
 }
