--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -8,7 +8,7 @@
   align-items: center;
   /* top: 1vh; */
   width: 100vw;
-  height: 12vh;
+  height: 10vh;
   /* padding: 2vh; */
   margin: 0;
   position: fixed;
@@ -53,7 +53,7 @@
 } */
 
 .namelogo {
-  width: 33%;
+  width: 24%;
 }
 
 @media screen and (max-width: 800px) {
@@ -75,6 +75,7 @@
 @media screen and (min-width: 800px) and (max-width: 1068px) {
   .navbarContainer {
     text-align: center;
+    padding-top: 2vh;
   }
   /* .namelogo {
     height: 6vw;
@@ -91,13 +92,20 @@
 }
 
 @media (min-width: 800px) and (max-width: 890px) {
-  /* .namelogo {
+  .namelogo {
     width: 35vh;
-  } */
+  }
+  .navbarContainer {
+    height: 8vh;
+    padding-top: 2vh;
+  }
 }
 
 @media (max-height: 420px) {
   .namelogo {
     width: 55vh;
+  }
+  .navbarContainer {
+    height: 15vh;
   }
 }
