--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -13,6 +13,7 @@
   margin: 0;
   position: fixed;
   z-index: 3;
+  padding-top: 0vh;
 
   /* border-bottom: white 0.8px solid; */
 }
@@ -96,7 +97,7 @@
     width: 35vh;
   }
   .navbarContainer {
-    height: 8vh;
+    height: 9vh;
     padding-top: 2vh;
   }
 }
@@ -106,6 +107,6 @@
     width: 55vh;
   }
   .navbarContainer {
-    height: 15vh;
+    height: 18vh;
   }
 }
